# rafiki

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  Makefile  README.md  io.github.giosali.Rafiki.desktop  main.cpp  mainwindow.cpp  mainwindow.ui  test.sh
data/: dark-theme.json  light-theme.json  rafiki.desktop  resources.qrc  settings.ini  tlds-alpha-by-domain.txt  web-searches.json
fonts/: resources.qrc
icons/: resources.qrc
images/: resources.qrc
src/: argumentparser.cpp  argumentparser.h  autocompletemap.cpp  autocompletemap.h  baseresult.cpp  baseresult.h  calculator.cpp  calculator.h  client.cpp  client.h  commandline.cpp  commandline.h  datamodel.cpp  datamodel.h  definitions.h  input.cpp  input.h  interactable.h  main.cpp  mainlineedit.cpp  mainlineedit.h  mainlistview.cpp  mainlistview.h  mainlistwidget.cpp  mainlistwidget.h  mainlistwidgetitem.cpp  mainlistwidgetitem.h  mainlistwidgetitem.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagereceiver.cpp  messagereceiver.h  project.cpp  project.h  projectio.cpp  projectio.h  resources.qrc  searchbox.cpp  searchbox.h  (+15 more)
src/core/: autocompletemap.h  autocompleter.cpp  autocompleter.h  client.cpp  client.h  config.cpp  config.h  crud.cpp  crud.h  crypto.cpp  crypto.h  definitions.h  fetcher.cpp  fetcher.h  file.cpp  file.h  finder.cpp  finder.h  id.cpp  id.h  indexer.cpp  indexer.h  inifile.cpp  inifile.h  input.cpp  input.h  io.cpp  io.h  paths.cpp  paths.h  project.cpp  project.h  server.cpp  server.h  settings.cpp  settings.h  theme.cpp  theme.h  urlparser.cpp  urlparser.h  (+3 more)
src/core/bridges/: applicationbridge.cpp  applicationbridge.h  calculatorbridge.cpp  calculatorbridge.h  featurebridge.cpp  featurebridge.h  filesystementrybridge.cpp  filesystementrybridge.h  refreshbridge.cpp  refreshbridge.h  settingsbridge.cpp  settingsbridge.h  trashbridge.cpp  trashbridge.h  urlbridge.cpp  urlbridge.h  websearchbridge.cpp  websearchbridge.h
src/core/models/: applicationmodel.cpp  applicationmodel.h  calculatormodel.cpp  calculatormodel.h  featuremodel.cpp  featuremodel.h  filesystementrymodel.cpp  filesystementrymodel.h  refreshmodel.cpp  refreshmodel.h  settingsmodel.cpp  settingsmodel.h  trashmodel.cpp  trashmodel.h  urlmodel.cpp  urlmodel.h  websearchmodel.cpp  websearchmodel.h
src/core/objects/: applicationobject.cpp  applicationobject.h  calculatorobject.cpp  calculatorobject.h  featureobject.cpp  featureobject.h  filesystementryobject.cpp  filesystementryobject.h  refreshobject.cpp  refreshobject.h  settingsobject.cpp  settingsobject.h  trashobject.cpp  trashobject.h  urlobject.cpp  urlobject.h  websearchobject.cpp  websearchobject.h
src/core/visitors/: featurevisitable.cpp  featurevisitable.h  featurevisitor.cpp  featurevisitor.h  objectvisitor.cpp  objectvisitor.h
src/gnulinux/: desktopentry.cpp  desktopentry.h  io.cpp  io.h
src/models/: application.cpp  application.h  baseresult.cpp  baseresult.h  calculator.cpp  calculator.h  filesystementry.cpp  filesystementry.h  interactable.h  processedresult.cpp  processedresult.h  processedresultbuilder.cpp  processedresultbuilder.h  result.cpp  result.h  trash.cpp  trash.h  url.cpp  url.h  websearch.cpp  websearch.h
src/ui/: calculatortab.cpp  calculatortab.h  calculatortab.ui  customlineedit.cpp  customlineedit.h  filesearchtab.cpp  filesearchtab.h  filesearchtab.ui  generaltab.cpp  generaltab.h  generaltab.ui  interactivelabel.cpp  interactivelabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  miscellaneoustab.cpp  miscellaneoustab.h  miscellaneoustab.ui  searchbox.cpp  searchbox.h  searchbox.ui  searchresult.cpp  searchresult.h  searchresult.ui  searchresultitem.cpp  searchresultitem.h  searchresultlist.cpp  searchresultlist.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  toggletab.cpp  toggletab.h  websearchdialog.cpp  websearchdialog.h  websearchdialog.ui  websearchestab.cpp  websearchestab.h  websearchestab.ui  (+3 more)
test/: CMakeLists.txt  test_autocompletemap.cpp  test_shuntingyardalgorithm.cpp  test_utils.cpp
tests/: CMakeLists.txt  calculatorbridge_test.cpp  calculatorbridge_test.h  htrie_map_test.h  indexer_test.cpp  indexer_test.h  main.cpp  test_autocompletemap.cpp  test_autocompleter.cpp  test_shuntingyardalgorithm.cpp  test_urlparser.cpp  test_utils.cpp  urlbridge_test.cpp  urlbridge_test.h  utilities_test.cpp  utilities_test.h  websearchbridge_test.cpp
tests/core/bridges/: calculatorbridge_test.h  urlbridge_test.cpp  websearchbridge_test.cpp  websearchbridge_test.h
tests/include/tsl/: htrie_map_test.cpp
tests/resources/: duckduckgo.json  firefox.desktop
tools/: test.sh
translations/: rafiki.ts  rafiki_FR.ts  rafiki_US.ts  rafiki_en.ts  rafiki_fr_FR.ts  rafiki_fr_fr.ts
